# MusicPlayer

./: CMakeLists.txt  README.md  main.cpp  myapp.rc  resourcesimages.qrc
cpp/: getlyrics.cpp  getlyrics.h  lyricsmodel.cpp  lyricsmodel.h  nodemanager.cpp  nodemanager.h  search.cpp  search.h  searchmodel.cpp  searchmodel.h  searchmusic.h
music/: 一路向北.lrc  爱你没差.lrc
